--- a/src/main/resources/static/stage.html
+++ b/src/main/resources/static/stage.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="module" src="src/screens/game.js"></script>
-    <link rel="stylesheet" href="src/screens/game.css">
+    <script type="module" src="src/screens/stage.js"></script>
+    <link rel="stylesheet" href="src/screens/stage.css">
 </head>
-
 <body>
 <div id="game">
     <div onclick="window.history.back()">메뉴 이동</div>
