약간의 디자인

--- a/src/main/resources/static/stage.html
+++ b/src/main/resources/static/stage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="module" src="src/screens/stage.js"></script>
-    <link rel="stylesheet" href="src/screens/stage.css">
+    <script type="module" src="stage/stage.js"></script>
+    <link rel="stylesheet" href="stage/stage.css">
 </head>
 <body>
 <div id="game">
