--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>인하의 모험</title>
     <link rel="stylesheet" type="text/css" href="src/index/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="src/index/index.js"></script>
+
 </head>
 <body>
     <div class="header">
@@ -13,7 +15,7 @@
         <a href="#" id="withdraw-button">WithDraw</a>
     </div>
     <div class="center">
-        <h1>Game Main Page</h1>
+        <h1>Inha Escape</h1>
         <div id="stage-buttons"></div>
     </div>
     <div class="top-right">
