window domain 묶기

--- a/src/main/resources/static/stage.html
+++ b/src/main/resources/static/stage.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="header">
-    <div id="menu" onclick="window.history.back()">메뉴 이동</div>
+    <div id="menu">메뉴 이동</div>
 </div>
 
 <div class="top-right white-box">
