--- a/src/screens/index.html
+++ b/src/screens/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="home.js"></script>
     <style>
         tr, td {
             width: 30px;
